[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "asgi-types"
version = "0.1.0"
description = "ASGI typing module focused on correctness! 📋"
license = { text = "MIT" }
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
readme = "README.md"
