[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "uvicorn-httparse"
version = "0.1.0"
description = "Uvicorn HTTP implementation using httparse! ðŸƒ"
license = { text = "MIT" }
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["httparse>=0.2.1", "uvicorn>=0.19.0"]
