[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "uvicorn-trailers"
version = "0.1.0"
description = "ASGI Trailers extension for Uvicorn 🚂"
license = { text = "MIT" }
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
readme = "README.md"
dependencies = ["asgi-types==0.1.0", "httptools>=0.5.0", "uvicorn>=0.19.0"]
requires-python = ">=3.7"
