[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "uvicorn-worker"
version = "0.1.0"
description = "Uvicorn worker for Gunicorn ⚙️"
license = { text = "MIT" }
authors = [{ name = "Marcelo Trylesinski", email = "marcelotryle@gmail.com" }]
readme = "README.md"
